--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Portfolio</title>
+  <title>Cook Code</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="shortcut icon" href="./images/logo.png" type="image/png" sizes="128x128" />
 </head>
