--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li class="navbar__item"><a href="#work" class="navbar__link">Work
           </a>
         </li>
-        <li class="navbar__item"><a href="#about" class="navbar__link">About Us
+        <li class="navbar__item"><a href="#about" class="navbar__link">About
           </a>
         </li>
         <li class="navbar__item"><a href="#contact" class="navbar__link">Contact
